c2dascript-transpile/tests/snapshots/snapshots__transpile@incomplete_arrays.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/incomplete_arrays.c
---
options gen2
options solid_context = true

var c2da_rt_heap : array<uint8>

var c2da_rt_locals : array<uint64>

var c2da_rt_next : uint64 = 0x0

var c2da_rt_alloc_addrs : array<uint64>

var c2da_rt_alloc_sizes : array<uint64>

var c2da_rt_alloc_live : array<bool>

var c2da_rt_alloc_free : array<int>

[sideeffects]
def c2da_rt_init_heap() {
    if (empty(c2da_rt_heap)) {
        reserve(c2da_rt_heap, 1073741824l)
        resize(c2da_rt_heap, 1)
    }
}
[sideeffects]
def c2da_rt_reset() {
    c2da_rt_next = 0x0
    resize(c2da_rt_alloc_addrs, 0)
    resize(c2da_rt_alloc_sizes, 0)
    resize(c2da_rt_alloc_live, 0)
    resize(c2da_rt_alloc_free, 0)
}
[sideeffects]
def c2da_rt_find_record(address : uint64) : int {
    var lo : int = 0
    var hi : int = length(c2da_rt_alloc_addrs)
    while (lo < hi) {
        let mid : int = (lo + hi) / 2
        if (c2da_rt_alloc_addrs[mid] < address) {
            lo = mid + 1
        } else {
            hi = mid
        }
    }
    if (lo < length(c2da_rt_alloc_addrs) && c2da_rt_alloc_addrs[lo] == address) {
        return lo
    }
    return -1
}
[sideeffects]
def c2da_rt_take_free(need : uint64) : int {
    var best : int = -1
    var best_slot : int = -1
    var slot : int = length(c2da_rt_alloc_free) - 1
    while (slot >= 0) {
        let record : int = c2da_rt_alloc_free[slot]
        let capacity : uint64 = c2da_rt_alloc_sizes[record]
        if (capacity >= need && capacity - need <= need) {
            if (best < 0 || capacity < c2da_rt_alloc_sizes[best]) {
                best = record
                best_slot = slot
            }
            if (capacity == need) {
                break
            }
        }
        slot--
    }
    if (best >= 0) {
        c2da_rt_alloc_free[best_slot] = int(c2da_rt_alloc_free[length(c2da_rt_alloc_free) - 1])
        pop(c2da_rt_alloc_free)
    }
    return best
}
[sideeffects]
def c2da_rt_malloc(size : uint64) : uint64 {
    c2da_rt_init_heap()
    if (size == 0x0 || size > 0x40000000) {
        return 0x0
    }
    let need : uint64 = (size + 0xf) / 0x10 * 0x10
    let reused : int = c2da_rt_take_free(need)
    if (reused >= 0) {
        c2da_rt_alloc_live[reused] = true
        return c2da_rt_alloc_addrs[reused]
    }
    let base : uint64 = unsafe(intptr(unsafe(addr(c2da_rt_heap[0x0]))))
    let start : uint64 = (base + c2da_rt_next + 0xf) / 0x10 * 0x10 - base
    let end : uint64 = start + need
    if (end > 0x40000000) {
        return 0x0
    }
    if (int64(end) > long_length(c2da_rt_heap)) {
        resize(c2da_rt_heap, int64(end))
    }
    c2da_rt_next = end
    let address : uint64 = unsafe(intptr(unsafe(addr(c2da_rt_heap[start]))))
    let record : uint64 = uint64(long_length(c2da_rt_alloc_addrs))
    resize(c2da_rt_alloc_addrs, int64(record + 0x1))
    resize(c2da_rt_alloc_sizes, int64(record + 0x1))
    resize(c2da_rt_alloc_live, int64(record + 0x1))
    c2da_rt_alloc_addrs[record] = address
    c2da_rt_alloc_sizes[record] = need
    c2da_rt_alloc_live[record] = true
    return address
}
[sideeffects]
def c2da_rt_free(address : uint64) {
    let record : int = c2da_rt_find_record(address)
    if (record >= 0 && c2da_rt_alloc_live[record]) {
        c2da_rt_alloc_live[record] = false
        push(c2da_rt_alloc_free, record)
    }
}
[sideeffects]
def c2da_rt_realloc(address : uint64; size : uint64) : uint64 {
    if (address == 0x0) {
        return c2da_rt_malloc(size)
    }
    if (size == 0x0) {
        c2da_rt_free(address)
        return 0x0
    }
    let record : int = c2da_rt_find_record(address)
    if (record < 0 || !c2da_rt_alloc_live[record]) {
        return 0x0
    }
    let capacity : uint64 = c2da_rt_alloc_sizes[record]
    if (size <= capacity) {
        return address
    }
    if (size > 0x40000000) {
        return 0x0
    }
    let need : uint64 = (size + 0xf) / 0x10 * 0x10
    let start : uint64 = address - unsafe(intptr(unsafe(addr(c2da_rt_heap[0x0]))))
    let end : uint64 = start + need
    if (start + capacity == c2da_rt_next && end <= 0x40000000) {
        if (int64(end) > long_length(c2da_rt_heap)) {
            resize(c2da_rt_heap, int64(end))
        }
        c2da_rt_next = end
        c2da_rt_alloc_sizes[record] = need
        return address
    }
    let replacement : uint64 = c2da_rt_malloc(size)
    if (replacement == 0x0) {
        return 0x0
    }
    c2da_rt_memcpy(replacement, address, capacity)
    c2da_rt_free(address)
    return replacement
}
[sideeffects]
def c2da_rt_memset(dst : uint64; value : uint8; count : uint64) : uint64 {
    var done : uint64 = 0x0
    while (done < count) {
        let chunk : uint64 = count - done < 0x40000000ul ? count - done : 0x40000000ul
        unsafe(memset8(unsafe(reinterpret<void?>(dst + done)), value, int(chunk)))
        done += chunk
    }
    return dst
}
[sideeffects]
def c2da_rt_calloc(count : uint64; size : uint64) : uint64 {
    let total : uint64 = count * size
    if (size != 0x0 && total / size != count) {
        return 0x0
    }
    let address : uint64 = c2da_rt_malloc(total)
    if (address != 0x0) {
        c2da_rt_memset(address, 0x0u8, total)
    }
    return address
}
[sideeffects]
def c2da_rt_memcpy(dst : uint64; src : uint64; count : uint64) : uint64 {
    var i : uint64 = 0x0
    while (i < count) {
        unsafe(unsafe(reinterpret<uint8?>(dst))[i]) = uint8(unsafe(unsafe(reinterpret<uint8?>(src))[i]))
        i = i + 0x1
    }
    return dst
}
[sideeffects]
def c2da_rt_memcmp(left : uint64; right : uint64; count : uint64) : int {
    var i : uint64 = 0x0
    while (i < count) {
        if (uint(unsafe(unsafe(reinterpret<uint8?>(left))[i])) < uint(unsafe(unsafe(reinterpret<uint8?>(right))[i]))) {
            return -1
        }
        if (uint(unsafe(unsafe(reinterpret<uint8?>(left))[i])) > uint(unsafe(unsafe(reinterpret<uint8?>(right))[i]))) {
            return 1
        }
        i = i + 0x1
    }
    return 0
}
[sideeffects]
def c2da_rt_memmove(dst : uint64; src : uint64; count : uint64) : uint64 {
    if (dst < src) {
        var i : uint64 = 0x0
        while (i < count) {
            unsafe(unsafe(reinterpret<uint8?>(dst))[i]) = uint8(unsafe(unsafe(reinterpret<uint8?>(src))[i]))
            i = i + 0x1
        }
    } else {
        var i : uint64 = count
        while (i > 0x0) {
            i = i - 0x1
            unsafe(unsafe(reinterpret<uint8?>(dst))[i]) = uint8(unsafe(unsafe(reinterpret<uint8?>(src))[i]))
        }
    }
    return dst
}
[sideeffects]
def c2da_rt_memchr(src : uint64; value : uint8; count : uint64) : uint64 {
    var i : uint64 = 0x0
    while (i < count) {
        if (unsafe(unsafe(reinterpret<uint8?>(src))[i]) == value) {
            return src + i
        }
        i = i + 0x1
    }
    return 0x0
}
[sideeffects]
def c2da_rt_frame_enter() : int {
    return length(c2da_rt_locals)
}
[sideeffects]
def c2da_rt_frame_leave(mark : int) {
    while (length(c2da_rt_locals) > mark) {
        c2da_rt_free(c2da_rt_locals[length(c2da_rt_locals) - 1])
        pop(c2da_rt_locals)
    }
}
[sideeffects]
def c2da_rt_local(size : uint64; align : uint64) : uint64 {
    let address = c2da_rt_calloc(0x1ul, size + 0x1)
    if (address == 0x0) {
        panic("c2da runtime: the 1073741824-byte heap reserve cannot hold storage for a C local")
    }
    push(c2da_rt_locals, address)
    return address
}
[sideeffects]
def c2da_rt_static(size : uint64; align : uint64) : uint64 {
    let address = c2da_rt_calloc(0x1ul, size + 0x1)
    if (address == 0x0) {
        panic("c2da runtime: the 1073741824-byte heap reserve cannot hold storage for a C static object")
    }
    return address
}
struct C2daVaArg {
    tag : int
    i64 : int64
    f64 : double
    raw : uint64
}
struct C2daVaCursor {
    index : int
}
[sideeffects]
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
[sideeffects]
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
[sideeffects]
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
[sideeffects]
def c2da___bswap_16(var c2da___bsx : uint16) : uint16 {
    return uint16(int(c2da___bsx) >> 8 & 255 | (int(c2da___bsx) & 255) << 8)
}
[sideeffects]
def c2da___bswap_32(var c2da___bsx_0 : uint) : uint {
    return (c2da___bsx_0 & 0xff000000u) >> 24u | (c2da___bsx_0 & 0xff0000u) >> 8u | (c2da___bsx_0 & 0xff00u) << 8u | (c2da___bsx_0 & 0xffu) << 24u
}
[sideeffects]
def c2da___bswap_64(var c2da___bsx_1 : uint64) : uint64 {
    return (c2da___bsx_1 & 0xff00000000000000ul) >> 56ul | (c2da___bsx_1 & 0xff000000000000ul) >> 40ul | (c2da___bsx_1 & 0xff0000000000ul) >> 24ul | (c2da___bsx_1 & 0xff00000000ul) >> 8ul | (c2da___bsx_1 & 0xff000000ul) << 8ul | (c2da___bsx_1 & 0xff0000ul) << 24ul | (c2da___bsx_1 & 0xff00ul) << 40ul | (c2da___bsx_1 & 0xfful) << 56ul
}
[sideeffects]
def c2da___uint16_identity(var c2da___x : uint16) : uint16 {
    return c2da___x
}
[sideeffects]
def c2da___uint32_identity(var c2da___x_0 : uint) : uint {
    return c2da___x_0
}
[sideeffects]
def c2da___uint64_identity(var c2da___x_1 : uint64) : uint64 {
    return c2da___x_1
}
